[package]
name = "runners-initiative-manager2"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
ts-rs = "6.2"
tauri = { version = "1.3", features = ["fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-remove-file", "fs-rename-file", "fs-write-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "1.0.0-beta.9+20230402", features = ["kv-rocksdb"] }
tokio = { version = "1.28.1", features = ["full"] }
async-trait = "0.1.68"
strum = "0.24.1"
strum_macros = "0.24"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
